[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enlace_auth"
version = "0.1.1"
description = "Authentication, sessions, admin dashboard, and per-user stores for the enlace platform"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["enlace", "auth", "fastapi", "platform", "argon2", "session", "admin"]
authors = [{ name = "Thor Whalen" }]
dependencies = [
    "enlace>=0.1.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "itsdangerous>=2.1",
    "argon2-cffi>=23",
    "dol>=0.2",
    "email-validator>=2.0",
    "argh>=0.31.0",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/i2mint/enlace_auth"

[project.scripts]
enlace-auth = "enlace_auth.__main__:main"

[project.optional-dependencies]
oauth = ["authlib>=1.3", "httpx>=0.24.0"]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "authlib>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D100"]
ignore = ["D203"]

[tool.ruff.lint.per-file-ignores]
"tests/test_auth_e2e.py" = ["E501"]
"tests/test_doctor.py" = ["E501"]

[tool.wads.ci]
installer = "uv"

[tool.wads.ci.testing]
python_versions = ["3.10", "3.12"]
coverage_enabled = false
test_on_windows = false

[tool.hatch.build.targets.wheel]
packages = ["enlace_auth"]
